# tokend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  tokend.yaml
.github/workflows/: ci.yml  docker-publish.yml
benches/: tokenize.rs
docs/: API.md  DESIGN.md
examples/: README.md  docker-compose.yaml  envoy.yaml  tokend-demo.yaml
proto/: tokend.proto
src/: chat_template.rs  config.rs  lib.rs  main.rs  metrics.rs  payloads.rs  tokenizer.rs
src/server/: ext_proc.rs  grpc.rs  http.rs  mod.rs
